# youarebot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.llm  Dockerfile.streamlit  README.md  docker-compose.yaml  download_model.sh  justfile  pyproject.toml  run_all_linux.sh
app/: database.py  models.py
app/api/: classify.py  config.py  llm_client.py  main.py
app/web/: streamlit_app.py
