[project]
name = "echobot"
version = "0.0.1"
description = "Simple echo bot for HumanOrBot project."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[standard]>=0.115.0,<1.0.0",
    "openai>=1.0.0,<2.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "requests>=2.34.2",
    "sentencepiece>=0.2.0,<1.0.0",
    "streamlit>=1.43.0,<2.0.0",
    "torch>=2.6.0,<3.0.0",
    "transformers>=4.49.0,<5.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "platform_system == 'Linux'" },
]

[tool.ruff]
line-length = 120

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
